<resources>
    <string name="app_name">Restaurantes</string>
    <string name="add">Agregar</string>
    <string name="filtrar">Filtrar</string>
    <string name="name">Nombre</string>
    <string name="score">Calificacion</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="alert_title">Eliminar</string>
    <string name="alert_msg">Desea eliminar el restaurante?</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_title">Agregar Restaurante</string>
    <string name="address">Direccion</string>

    <string-array name="restaurantes">
        <item>Mesa Larga</item>
        <item>Pizzarra</item>
        <item>Tequilas</item>
        <item>Semilla Escondida</item>
    </string-array>

</resources>
