<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_filter"
        android:title="@string/filtrar"
        android:icon="@drawable/ic_filter"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/action_filter_name"
                android:title="@string/name"
                />
            <item
                android:id="@+id/action_filter_score"
                android:title="@string/score"
                />
        </menu>
    </item>
</menu>